src/objects/Subscription_Form__c.object
<CustomObject>
    <fields>
        <fullName>Channels_Selected__c</fullName>
        <label>Channels Selected</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Subscription Forms</relationshipLabel>
        <relationshipName>Subscription_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Oppty_Lead_Source__c</fullName>
        <formula>Text(Opportunity__r.LeadSource )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oppty Lead Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Subscription Form</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Email__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SF - {0000}</displayFormat>
        <label>Subscription Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscription Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>